<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewGoalTeamOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/goals"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewTeamOneScore"
        app:layout_constraintLeft_toLeftOf="@+id/textViewTeamOneName"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textViewTeamOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_one"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewTeamOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonTeamOneAddPoint"
        app:layout_constraintLeft_toLeftOf="@+id/textViewGoalTeamOne"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/buttonTeamOneAddPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:layout_marginTop="97dp"
        android:text="@string/add_point"
        app:layout_constraintBottom_toTopOf="@+id/textViewTeamTwoFoulNumber"
        app:layout_constraintLeft_toRightOf="@+id/textViewTeamOneScore"
        app:layout_constraintRight_toRightOf="@+id/textViewTeamOneScore"
        app:layout_constraintTop_toTopOf="@+id/textViewTeamOneName"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewTeamTwoFoulNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonTeamTwoAddFoul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_foul"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeamTwoFoulNumber"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="220dp"
        android:text="@string/fouls"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewNameTeamTwo"
        app:layout_constraintRight_toRightOf="@+id/buttonTeamTwoAddPoint"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goals"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewGoalTeamOne"
        app:layout_constraintLeft_toRightOf="@+id/textViewScoreTeamTwo"
        app:layout_constraintRight_toRightOf="@+id/textViewScoreTeamTwo"
        app:layout_constraintTop_toTopOf="@+id/textViewGoalTeamOne"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewNameTeamTwo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_two"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintLeft_toRightOf="@+id/textViewScoreTeamTwo"
        app:layout_constraintRight_toRightOf="@+id/textViewScoreTeamTwo"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewScoreTeamTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginTop="4dp"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonTeamTwoAddPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_point"
        app:layout_constraintLeft_toRightOf="@+id/textViewScoreTeamTwo"
        app:layout_constraintRight_toRightOf="@+id/textViewScoreTeamTwo"
        app:layout_constraintTop_toBottomOf="@+id/textViewScoreTeamTwo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewTeamOneFoulNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@+id/textViewTeamOneFoul"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeamOneFoul"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonTeamOneAddFoul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_foul"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeamOneFoulNumber"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewTeamOneFoul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="107dp"
        android:layout_marginTop="107dp"
        android:text="@string/fouls"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTeamTwoAddFoul"
        app:layout_constraintLeft_toLeftOf="@+id/buttonTeamOneAddFoul"
        app:layout_constraintRight_toRightOf="@+id/buttonTeamOneAddFoul"
        app:layout_constraintTop_toTopOf="@+id/buttonTeamOneAddPoint"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/ButtonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>